# learning-c-and-cmake

./: .gitignore  CMakeLists.txt  README.md  main.c  shader.frag  shader.vert
glad/: CMakeLists.txt  glad.c  glad.h
include/: CMakeLists.txt  foo.h
src/: CMakeLists.txt  matrix.c  matrix.h  utils.h  vec.c  vec.h
